--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
       <uses-permission android:name="android.permission.INTERNET"/> <!-- Add this -->
 
    <application
-        android:label="personality_test"
+        android:label="Personality Test"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
